# rust_book

./: .gitignore
Projects/api/: Cargo.toml
Projects/api/src/: main.rs
Projects/file_compression/: Cargo.toml  compressed_file
Projects/file_compression/src/: main.rs
Projects/file_decompression/: Cargo.toml
Projects/file_decompression/src/: main.rs
Projects/json/: Cargo.toml
Projects/json/src/: main.rs
Rocket/api/: Cargo.toml
Rocket/api/src/: main.rs  serde.rs  tauri.rs
Rocket/auth/: Cargo.toml
Rocket/auth/src/: main.rs  services.rs
Rocket/postgres/: Cargo.toml  docker-compose.yaml  run.sh
Rocket/postgres/src/: main.rs
Rocket/postgres/src/models/: object.rs
Rocket/webSockets/: Cargo.toml
Rocket/webSockets/src/: main.rs
auth/: Cargo.toml
auth/src/: main.rs
aws/: Cargo.toml
aws/src/: main.rs
chap_2/src/: main.rs
chap_3/src/: main.rs
chap_5/src/: main.rs  match.rs
chap_6/src/: lib.rs
chap_7/: Cargo.toml
chap_7/src/: main.rs
chap_8/src/: guess.rs  main.rs
chapters/chap_1/src/: main.rs
chapters/chap_4/src/: main.rs
chapters/chap_5/src/: matchOptional.rs
chapters/chap_6/: Cargo.toml
chapters/chap_6/src/: two.rs
chapters/chap_7/: Cargo.toml
chapters/chap_7/src/: main.rs
chapters/chap_8/src/: guess.rs
chapters/chap_9/src/: main.rs
chat/: Cargo.toml
chat/src/: main.rs
guess/: Cargo.toml
guess/src/: main.rs
