[package]
name = "webSockets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.192"
serde_json = "1.0.107"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
reqwest = { version = "0.11.23", features = ["json"] }
rand = "0.8.4"
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
sea-orm = { version = "0.12.10", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }